[gd_scene load_steps=46 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scene/Menu/MenuBackgroud.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pic/ui/LevelDone.png" type="Texture" id=3]
[ext_resource path="res://Font/New Super Mario Font U.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=14]
resource_name = "MainMenuOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 377.313, 252.139 ), Vector2( 543.09, 171.689 ) ]
}

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="DynamicFont" id=16]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=17]
size = 33
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="DynamicFont" id=24]
size = 17
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxEmpty" id=29]

[sub_resource type="DynamicFont" id=30]
size = 17
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=31]

[sub_resource type="DynamicFont" id=32]
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=33]
resource_name = "SettingsIn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 541.459, 280.903 ), Vector2( 335.213, 247.26 ) ]
}

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )

[sub_resource type="DynamicFont" id=35]
size = 21
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=36]

[sub_resource type="StyleBoxEmpty" id=37]

[sub_resource type="StyleBoxEmpty" id=38]

[sub_resource type="StyleBoxEmpty" id=39]

[sub_resource type="StyleBoxEmpty" id=40]

[sub_resource type="DynamicFont" id=41]
size = 21
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.30164
margin_top = -1.69833
margin_right = -1.30164
margin_bottom = -1.69833
script = ExtResource( 1 )

[node name="MenuBackgroud" parent="." instance=ExtResource( 2 )]
margin_left = -2.40637
margin_top = -1.39365
margin_right = 513.594
margin_bottom = 515.606

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 312.0
margin_right = 256.0
margin_bottom = 568.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
margin_left = 102.481
margin_top = 50.1758
margin_right = 500.481
margin_bottom = 134.176
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.972549, 0.341176, 0.827451, 1 )
text = "Leap ByCycle"

[node name="StartButton" type="Button" parent="."]
margin_left = 377.801
margin_top = 251.652
margin_right = 488.801
margin_bottom = 294.652
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0.466667, 0.466667, 0.466667, 1 )
custom_colors/font_color = Color( 0.945098, 0.254902, 0.254902, 1 )
custom_colors/font_color_hover = Color( 0.92549, 0.427451, 0.427451, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.611765, 0.611765, 1 )
text = "Start"

[node name="Settings" type="Button" parent="StartButton"]
margin_top = 45.0678
margin_right = 110.999
margin_bottom = 78.0682
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_disabled = Color( 0.466667, 0.466667, 0.466667, 1 )
custom_colors/font_color = Color( 0.945098, 0.254902, 0.254902, 1 )
custom_colors/font_color_hover = Color( 0.92549, 0.427451, 0.427451, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.611765, 0.611765, 1 )
text = "Settings"

[node name="MainPlayer" type="AnimationPlayer" parent="StartButton"]
anims/MainMenuOut = SubResource( 14 )

[node name="Continue" type="Button" parent="StartButton"]
margin_left = -67.6741
margin_top = -81.32
margin_right = 115.326
margin_bottom = -38.32
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0.945098, 0.254902, 0.254902, 1 )
custom_colors/font_color_hover = Color( 0.92549, 0.427451, 0.427451, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.611765, 0.611765, 1 )
text = "Continue"

[node name="Levels" type="Button" parent="StartButton"]
margin_left = -21.8417
margin_top = -38.9006
margin_right = 110.158
margin_bottom = 4.09937
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0.945098, 0.254902, 0.254902, 1 )
custom_colors/font_color_hover = Color( 0.92549, 0.427451, 0.427451, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.611765, 0.611765, 1 )
text = "Levels"

[node name="SettingsLabel" type="Label" parent="."]
margin_left = 541.459
margin_top = 280.903
margin_right = 692.459
margin_bottom = 315.903
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0.945098, 0.254902, 0.254902, 1 )
text = "Settings"

[node name="SkipTutorial" type="CheckBox" parent="SettingsLabel"]
margin_left = 16.7585
margin_top = 37.1217
margin_right = 152.759
margin_bottom = 74.1217
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 21 )
custom_styles/hover_pressed = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color_disabled = Color( 0.866667, 0.329412, 0.329412, 1 )
custom_colors/font_color_hover_pressed = Color( 0.909804, 0.533333, 0.533333, 1 )
custom_colors/font_color = Color( 0.870588, 0.843137, 0.843137, 1 )
custom_colors/font_color_hover = Color( 0.909804, 0.533333, 0.533333, 1 )
custom_colors/font_color_pressed = Color( 0.866667, 0.329412, 0.329412, 1 )
text = "Skip Tutorial"

[node name="ResetGame" type="Button" parent="SettingsLabel"]
margin_left = 43.5815
margin_top = 72.5815
margin_right = 146.582
margin_bottom = 96.5815
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/focus = SubResource( 27 )
custom_styles/disabled = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
custom_fonts/font = SubResource( 30 )
custom_colors/font_color_hover = Color( 0.909804, 0.533333, 0.533333, 1 )
custom_colors/font_color_pressed = Color( 0.866667, 0.329412, 0.329412, 1 )
text = "Reset Game"

[node name="Back" type="Button" parent="SettingsLabel"]
margin_left = 64.4418
margin_top = 140.67
margin_right = 113.442
margin_bottom = 164.67
custom_styles/hover = SubResource( 31 )
custom_styles/pressed = SubResource( 31 )
custom_styles/focus = SubResource( 31 )
custom_styles/disabled = SubResource( 31 )
custom_styles/normal = SubResource( 31 )
custom_fonts/font = SubResource( 32 )
custom_colors/font_color_hover = Color( 0.909804, 0.533333, 0.533333, 1 )
custom_colors/font_color_pressed = Color( 0.866667, 0.329412, 0.329412, 1 )
text = "Back"

[node name="SettingsPlayer" type="AnimationPlayer" parent="SettingsLabel"]
anims/SettingsIn = SubResource( 33 )

[node name="PopupPanel" type="PopupPanel" parent="."]
margin_left = 113.955
margin_top = 213.234
margin_right = 428.955
margin_bottom = 369.234
custom_styles/panel = SubResource( 34 )

[node name="ResetWarining" type="Label" parent="PopupPanel"]
margin_right = 315.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 35 )
text = "This will reset all your record, do you make sure to do that?"
autowrap = true

[node name="ConfirmReset" type="Button" parent="PopupPanel"]
margin_right = 315.0
margin_bottom = 156.0
custom_styles/hover = SubResource( 36 )
custom_styles/pressed = SubResource( 37 )
custom_styles/focus = SubResource( 38 )
custom_styles/disabled = SubResource( 39 )
custom_styles/normal = SubResource( 40 )
custom_fonts/font = SubResource( 41 )
custom_colors/font_color = Color( 0.976471, 0.32549, 0.32549, 1 )
custom_colors/font_color_hover = Color( 0.945098, 0.541176, 0.541176, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "I'm sure"
[connection signal="button_up" from="StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="StartButton/Settings" to="." method="_on_Settings_button_up"]
[connection signal="button_up" from="StartButton/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="StartButton/Levels" to="." method="_on_Levels_button_up"]
[connection signal="toggled" from="SettingsLabel/SkipTutorial" to="." method="_on_SkipTutorial_toggled"]
[connection signal="pressed" from="SettingsLabel/ResetGame" to="." method="_on_ResetGame_pressed"]
[connection signal="button_up" from="SettingsLabel/Back" to="." method="_on_Back_button_up"]
[connection signal="button_up" from="PopupPanel/ConfirmReset" to="." method="_on_ConfirmReset_button_up"]
